Template API - Removed prefix from shipped phone numbers